1.6/_sources/modules/generated/sklearn.preprocessing.KBinsDiscretizer.rst.txt
KBinsDiscretizer
================

.. currentmodule:: sklearn.preprocessing

.. autoclass:: KBinsDiscretizer
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.preprocessing.KBinsDiscretizer sklearn.preprocessing.KBinsDiscretizer.__init__ sklearn.preprocessing.KBinsDiscretizer.fit sklearn.preprocessing.KBinsDiscretizer.fit_transform sklearn.preprocessing.KBinsDiscretizer.get_feature_names_out sklearn.preprocessing.KBinsDiscretizer.get_metadata_routing sklearn.preprocessing.KBinsDiscretizer.get_params sklearn.preprocessing.KBinsDiscretizer.inverse_transform sklearn.preprocessing.KBinsDiscretizer.set_fit_request sklearn.preprocessing.KBinsDiscretizer.set_output sklearn.preprocessing.KBinsDiscretizer.set_params sklearn.preprocessing.KBinsDiscretizer.transform 
   :add-heading: Gallery examples
   :heading-level: -