1.7/_sources/modules/generated/sklearn.preprocessing.KBinsDiscretizer.rst.txt
KBinsDiscretizer
================

.. currentmodule:: sklearn.preprocessing

.. autoclass:: KBinsDiscretizer
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.preprocessing.KBinsDiscretizer sklearn.preprocessing.KBinsDiscretizer.__delattr__ sklearn.preprocessing.KBinsDiscretizer.__dir__ sklearn.preprocessing.KBinsDiscretizer.__eq__ sklearn.preprocessing.KBinsDiscretizer.__format__ sklearn.preprocessing.KBinsDiscretizer.__ge__ sklearn.preprocessing.KBinsDiscretizer.__getattribute__ sklearn.preprocessing.KBinsDiscretizer.__getstate__ sklearn.preprocessing.KBinsDiscretizer.__gt__ sklearn.preprocessing.KBinsDiscretizer.__hash__ sklearn.preprocessing.KBinsDiscretizer.__init__ sklearn.preprocessing.KBinsDiscretizer.__init_subclass__ sklearn.preprocessing.KBinsDiscretizer.__le__ sklearn.preprocessing.KBinsDiscretizer.__lt__ sklearn.preprocessing.KBinsDiscretizer.__ne__ sklearn.preprocessing.KBinsDiscretizer.__new__ sklearn.preprocessing.KBinsDiscretizer.__reduce__ sklearn.preprocessing.KBinsDiscretizer.__reduce_ex__ sklearn.preprocessing.KBinsDiscretizer.__repr__ sklearn.preprocessing.KBinsDiscretizer.__setattr__ sklearn.preprocessing.KBinsDiscretizer.__setstate__ sklearn.preprocessing.KBinsDiscretizer.__sizeof__ sklearn.preprocessing.KBinsDiscretizer.__sklearn_clone__ sklearn.preprocessing.KBinsDiscretizer.__sklearn_tags__ sklearn.preprocessing.KBinsDiscretizer.__str__ sklearn.preprocessing.KBinsDiscretizer.__subclasshook__ sklearn.preprocessing.KBinsDiscretizer._build_request_for_signature sklearn.preprocessing.KBinsDiscretizer._get_default_requests sklearn.preprocessing.KBinsDiscretizer._get_doc_link sklearn.preprocessing.KBinsDiscretizer._get_metadata_request sklearn.preprocessing.KBinsDiscretizer._get_param_names sklearn.preprocessing.KBinsDiscretizer._get_params_html sklearn.preprocessing.KBinsDiscretizer._html_repr sklearn.preprocessing.KBinsDiscretizer._repr_html_inner sklearn.preprocessing.KBinsDiscretizer._repr_mimebundle_ sklearn.preprocessing.KBinsDiscretizer._validate_n_bins sklearn.preprocessing.KBinsDiscretizer._validate_params sklearn.preprocessing.KBinsDiscretizer.fit sklearn.preprocessing.KBinsDiscretizer.fit_transform sklearn.preprocessing.KBinsDiscretizer.get_feature_names_out sklearn.preprocessing.KBinsDiscretizer.get_metadata_routing sklearn.preprocessing.KBinsDiscretizer.get_params sklearn.preprocessing.KBinsDiscretizer.inverse_transform sklearn.preprocessing.KBinsDiscretizer.set_fit_request sklearn.preprocessing.KBinsDiscretizer.set_output sklearn.preprocessing.KBinsDiscretizer.set_params sklearn.preprocessing.KBinsDiscretizer.transform 
   :add-heading: Gallery examples
   :heading-level: -